[+] Refactored to two different controllers and services